src/z80asm/z80asm2/t/20-preproc/expected/define_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/define_01.asm
Assembling t/20-preproc/input/define_01.asm...
t/20-preproc/input/define_01.asm:1:7: error: Expected identifier after DEFINE
    define ; no name
          ^
# file: t/20-preproc/input/define_01.asm
Identifier	"DEFC"	2:9	keyword=DEFC 
Identifier	"X"	2:14	keyword=X 
EQ	"="	2:16	
Integer	"1"	2:18	int_value=1 
EndOfLine	"\n"	2:19	
Define constant: X = 1
t/20-preproc/input/define_01.asm:3:8: error: Macro redefinition: X
    define X ; duplicate definition
           ^
t/20-preproc/input/define_01.asm:2:8: note: Previous definition
    define X
           ^
Identifier	"DEFC"	4:9	keyword=DEFC 
Identifier	"Y"	4:14	
EQ	"="	4:16	
Integer	"1"	4:18	int_value=1 
EndOfLine	"\n"	4:19	
Define constant: Y = 1
t/20-preproc/input/define_01.asm:5:8: error: Macro redefinition: Y
    define Y(p1) ; duplicate definition
           ^
t/20-preproc/input/define_01.asm:4:8: note: Previous definition
    define Y
           ^
t/20-preproc/input/define_01.asm:6:11: error: Identifier expected
    define M1( ; missing close paren
              ^
t/20-preproc/input/define_01.asm:7:11: error: Identifier expected
    define M2(21 ; missing parameter
              ^
t/20-preproc/input/define_01.asm:8:14: error: Right parenthesis or comma expected
    define M3(p1 p2 ; missing comma
                 ^
t/20-preproc/input/define_01.asm:9:14: error: Parameter redefined: p1
    define M4(p1,p1) ; duplicate parameters
                 ^
Identifier	"defb"	11:1	keyword=DEFB 
LeftParen	"("	10:11	
Identifier	"p1"	10:12	
Comma	","	10:14	
Identifier	"p2"	10:15	
RightParen	")"	10:17	
LeftParen	"("	11:8	
Integer	"1"	11:9	int_value=1 
Comma	","	11:10	
Integer	"2"	11:11	int_value=2 
RightParen	")"	11:12	
EndOfLine	"\n"	11:13	
Identifier	"defb"	12:1	keyword=DEFB 
LeftParen	"("	10:11	
Identifier	"p1"	10:12	
Comma	","	10:14	
Identifier	"p2"	10:15	
RightParen	")"	10:17	
LeftParen	"("	12:9	
Integer	"1"	12:10	int_value=1 
Comma	","	12:11	
Integer	"2"	12:12	int_value=2 
RightParen	")"	12:13	
EndOfLine	"\n"	12:14	
Identifier	"defb"	14:1	keyword=DEFB 
Identifier	"M6"	14:6	
EndOfLine	"\n"	14:8	
t/20-preproc/input/define_01.asm:15:9: error: Missing ')' in macro invocation: M6
    defb M6( ; missing ')'
            ^
Identifier	"defb"	15:1	keyword=DEFB 
Identifier	"M6"	15:6	
LeftParen	"("	15:8	
EndOfLine	"\n"	15:9	
t/20-preproc/input/define_01.asm:16:6: error: Macro 'M6' expects 2 arguments, got 3
    defb M6(1,2,3) ; argument mismatch
         ^
Identifier	"defb"	16:1	keyword=DEFB 
Identifier	"M6"	16:6	
LeftParen	"("	16:8	
Integer	"1"	16:9	int_value=1 
Comma	","	16:10	
Integer	"2"	16:11	int_value=2 
Comma	","	16:12	
Integer	"3"	16:13	int_value=3 
RightParen	")"	16:14	
EndOfLine	"\n"	16:15	
Identifier	"defb"	17:1	keyword=DEFB 
LeftParen	"("	13:18	
Integer	"1"	17:9	int_value=1 
Plus	"+"	13:21	
LeftParen	"("	17:11	
Integer	"2"	17:12	int_value=2 
Comma	","	17:13	
Integer	"3"	17:14	int_value=3 
RightParen	")"	17:15	
RightParen	")"	13:24	
EndOfLine	"\n"	17:17	
Identifier	"defb"	21:1	keyword=DEFB 
Identifier	"M7"	20:11	
EndOfLine	"\n"	21:8	
Identifier	"defb"	22:1	keyword=DEFB 
Integer	"1"	2:9	int_value=1 
Comma	","	22:7	
Integer	"1"	2:9	int_value=1 
Comma	","	22:9	
Integer	"1"	4:9	int_value=1 
Comma	","	22:11	
Integer	"1"	4:9	int_value=1 
EndOfLine	"\n"	22:13	
EndOfLine	"\n"	23:1	
# file: t/20-preproc/input/define_01.asm
Identifier	"DEFINE"	10:8	keyword=DEFINE 
Identifier	"M5"	10:8	
EQ	"="	10:8	
LeftParen	"("	10:11	
Identifier	"p1"	10:12	
Comma	","	10:14	
Identifier	"p2"	10:15	
RightParen	")"	10:17	
# file: t/20-preproc/input/define_01.asm
Identifier	"DEFINE"	13:8	keyword=DEFINE 
Identifier	"M6"	13:8	
LeftParen	"("	13:8	
Identifier	"p1"	13:8	
Comma	","	13:8	
Identifier	"p2"	13:8	
RightParen	")"	13:8	
EQ	"="	13:8	
LeftParen	"("	13:18	
Identifier	"p1"	13:19	
Plus	"+"	13:21	
Identifier	"p2"	13:22	
RightParen	")"	13:24	
# file: t/20-preproc/input/define_01.asm
Identifier	"DEFINE"	18:8	keyword=DEFINE 
Identifier	"M7"	18:8	
EQ	"="	18:8	
Identifier	"M8"	18:11	
# file: t/20-preproc/input/define_01.asm
Identifier	"DEFINE"	19:8	keyword=DEFINE 
Identifier	"M8"	19:8	
EQ	"="	19:8	
Identifier	"M9"	19:11	
# file: t/20-preproc/input/define_01.asm
Identifier	"DEFINE"	20:8	keyword=DEFINE 
Identifier	"M9"	20:8	
EQ	"="	20:8	
Identifier	"M7"	20:11	
# file: t/20-preproc/input/define_01.asm
Identifier	"DEFINE"	2:8	keyword=DEFINE 
Identifier	"X"	2:8	keyword=X 
EQ	"="	2:8	
Integer	"1"	2:9	int_value=1 
# file: t/20-preproc/input/define_01.asm
Identifier	"DEFINE"	4:8	keyword=DEFINE 
Identifier	"Y"	4:8	
EQ	"="	4:8	
Integer	"1"	4:9	int_value=1 
symbol	X	1	(defined at t/20-preproc/input/define_01.asm:2:14)
symbol	Y	1	(defined at t/20-preproc/input/define_01.asm:4:14)
